--- a/HyuJokbo/HyuJokbo/JokboTabWriteStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabWriteStoryboard.storyboard
@@ -71,6 +71,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kml-z2-MgQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
